--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "start:c": "clear; node index.js",
     "dev": "nodemon index.js",
-    "dev:c": "clear; nodemon index.js"
+    "dev:c": "clear; nodemon index.js",
+    "dev:p": "node --watch index.js"
   },
   "repository": {
     "type": "git",
